--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,8 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 julia = "1"
 
 [extras]
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "ModelingToolkit"]
