--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["anand <anandj@uchicago.edu> and contributors"]
 version = "0.1.0"
 
 [deps]
+AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
