--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
+AbstractTrees = "0.3"
 Symbolics = "0.1"
 EzXML = "1.1"
 SpecialFunctions = "1.3"
