--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.1"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
@@ -13,10 +14,10 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
 AbstractTrees = "0.3"
-Symbolics = "0.1"
 EzXML = "1.1"
-SpecialFunctions = "1.3"
 IfElse = "0.1"
+SpecialFunctions = "1.3"
+Symbolics = "0.1"
 julia = "1"
 
 [extras]
