--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MathML"
 uuid = "abcecc63-2b08-419c-80c4-c63dca6fa478"
 authors = ["anand <anandj@uchicago.edu> and contributors"]
-version = "0.1.5"
+version = "0.1.6"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
@@ -18,7 +18,7 @@ DocStringExtensions = "0.8"
 EzXML = "1.1"
 IfElse = "0.1"
 SpecialFunctions = "1.3"
-Symbolics = "1"
+Symbolics = "0.1, 1"
 julia = "1"
 
 [extras]
