--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ DocStringExtensions = "0.8"
 EzXML = "1.1"
 IfElse = "0.1"
 SpecialFunctions = "1.3"
-Symbolics = "0.1, 1"
+Symbolics = "0.1, 1, 2, 3.1"
 julia = "1"
 
 [extras]
