--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MathML"
 uuid = "abcecc63-2b08-419c-80c4-c63dca6fa478"
 authors = ["anand <anandj@uchicago.edu> and contributors"]
-version = "0.1.10"
+version = "0.1.11"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
@@ -17,7 +17,7 @@ AbstractTrees = "0.3"
 DocStringExtensions = "0.8"
 EzXML = "1.1"
 IfElse = "0.1"
-SpecialFunctions = "1.3"
+SpecialFunctions = "1.3, 2"
 Symbolics = "3, 4"
 julia = "1.6"
 
